fixed stuck animation on mobile devices

--- a/src/containers/Projects/ProjectCard/ProjectCard.css
+++ b/src/containers/Projects/ProjectCard/ProjectCard.css
@@ -2,9 +2,12 @@
     min-height: 400px !important;
     transition: all .2s ease-in-out; 
 }
-.projectCard:hover {
-    transform: scale(1.1);  
+@media(hover: hover) and (pointer: fine) {
+    .projectCard:hover {
+        transform: scale(1.1);  
+    }
 }
+
 #cardTitle {
     font-weight: bold;
 }
